# er

./: .gitignore  Cargo.toml  Trunk.toml  index.html  styles.css
api/: Cargo.toml
api/src/repo/: department_shift.rs  employee.rs  permissions.rs
models/: Cargo.toml
models/src/: department.rs  employee.rs  lib.rs  machine.rs  name.rs  permissions.rs  problem.rs  shift.rs  shift_problem.rs  spare_part.rs
rec/: Cargo.toml
rec/src/: model.rs
rec/src/model/: department.rs  employee.rs  machine.rs  name.rs  note.rs  permissions.rs  problem.rs  shift.rs  shift_problem.rs  spare_part.rs
src/: app.rs  main.css  main.rs
src-tauri/: Cargo.toml  memory.db
src-tauri/src/: test.rs  translator.rs
src-tauri/src/memory/: employee.rs  note.rs  permissions.rs  shift.rs
src-tauri/src/syncing/memory/: employee.rs  permissions.rs  shift.rs
src-tauri/src/tauri_manage/: async_commands.rs  non_async_commands.rs
src-tauri/src/tauri_manage/components_commands/: controll.rs  history.rs
src/app/: app.css  login.rs  major_update.rs  shift_identity.rs  wall.rs
src/app/wall/: about.rs  controll.rs  current_shift.rs  history.rs  logout.rs  meta.rs  navbar.rs  password.rs  wall.css
src/app/wall/meta/: about.rs  logout.rs  password.rs
src/shared/: fun.rs
