[package]
name = "erc"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["src-tauri","api","rec","models"]

[workspace.dependencies]
serde = "^1"
serde_json = "^1"
chrono = "^0.4"
sqlx = "^0.6"
uuid = "^1"
strum = "^0.24"
strum_macros = "^0.24"
bcrypt = "^0.13"
dotenv  = "^0.15"
rec = { path = "./rec" }
models = { path = "./models" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde = { workspace = true, features = ["derive"] }
models = { workspace = true }
uuid = { workspace = true }
leptos = { version = "^0.3" , features = ["stable"]}
serde-wasm-bindgen = "0.5"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
tauri-sys = { git = "https://github.com/JonasKruckenberg/tauri-sys",features = ["tauri","event"] }
futures = "0.3.28"
