[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
sqlx = { workspace = true, features = [ "runtime-actix-native-tls" , "postgres", "chrono", "uuid", "json","migrate" ] }
chrono = { workspace = true, features = ["serde"]}
bcrypt = { workspace = true }
dotenv = { workspace = true }
rec = { workspace = true }
serde_derive = "1.0.8"
actix-web = "^4"
log = "^0.4"
env_logger = "^0.10"
settimeout = "0.1.2"

[profile.dev.package.sqlx-macros]
opt-level = 3
