[package]
name = "erc-ui"
version = "0.1.0"
description = "elegant rondy client"
authors = ["mahmoud eltahawy"]
edition = "2021"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
serde_json = {workspace = true}
serde   = { workspace = true,  features = ["derive"] }
chrono  = {  workspace = true, features = ["serde"] }
sqlx = { workspace = true, features = [ "runtime-tokio-native-tls" , "sqlite" , "migrate","time"] }
uuid    = { workspace = true,   features = ["v4", "serde"] }
strum = {workspace = true}
strum_macros = { workspace = true }
bcrypt = { workspace = true }
dotenv  = { workspace = true }
rec = { workspace = true }
reqwest = { version = "0.11", features = ["json"] }
tauri   = { version = "^1",  features = ["api-all"] }
tokio   = { version = "^1",    features = ["full"] }
rusqlite = { version = "0.27.0", features = ["bundled","uuid","time"] }
itertools = "0.10.5"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
